# secrets-in-archives

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: archive.py  config.py  db.py  r2.py  scanner.py  utils.py
